tests/should_fail/struct_bad_method.nv
module main

// SHOULD FAIL: calling a non-existent method on a struct
struct Foo { x: Int }
let f = Foo { x: 10 }
f.nonExistentMethod()
